--- a/Documentation/Requirements/references.bib
+++ b/Documentation/Requirements/references.bib
@@ -11,6 +11,38 @@ doi={10.1109/79.939834},
 ISSN={1053-5888},
 month={Jul},}
 
+@online{pres_fmts, 
+    author = {Library of Congress},
+    title = {WAVE Audio File Format},
+    year = {2013},
+    url = {http://www.digitalpreservation.gov/formats/fdd/fdd000001.shtml}
+    urldate = {2016-03-21}}
+
+@ARTICLE{shorten,
+         author = {Tony Robinson},
+         journal = {Cambridge University Engineering Department},
+         title = {SHORTEN: Simple lossless and near-lossless waveform compression},
+         year = {1994}
+         month = {Dec}}
+
+@misc{flac_popular,
+author={De Vorsey,Kevin and McKinney,Peter},
+year={2010},
+month={Spring},
+title={Digital Preservation in Capable Hands: Taking Control of Risk Assessment at the National Library of New Zealand},
+journal={Information Standards Quarterly},
+volume={22},
+number={2},
+pages={41-44},
+note={Copyright - Copyright National Information Standards Organization Spring 2010; Document feature - Illustrations; ; Last updated - 2015-09-03},
+abstract={The National Digital Heritage Archive (NDHA) of the National Library of New Zealand Te Puna Matauranga o Aotearoa has concluded that the measurement of conformance of files to a format standard for such risk analysis is at best insufficient and at worst harmful. For the digital documentary heritage of New Zealand, the ideal is the measurement of individual file profiles against application specifications. This gives a meaningful and actionable risk view of the content. The current policy of the NDHA is not to transform content into preferred formats on ingest, but this may be considered after additional research is conducted. In order to actively preserve this content, they must first understand exactly what form it is in. The risk analysis method the National Library employs measures each ingested file against a format and application relationship. The risk they have been discussing is the risk of what the community terms "digital obsolescence."},
+keywords={Library And Information Sciences; Digital video; Library collections; Archives & records; Preservation; Digital music; Metadata; Methods; Sustainability; Cultural heritage; Digital preservation; National libraries; New Zealand},
+language={English},
+url={http://search.proquest.com/docview/1709209052?accountid=12528}
+}
+
+
+
 @ARTICLE{findcite,
 author={Find Citation},
 journal={Find Citation},
