--- a/Documentation/Design Document/references.bib
+++ b/Documentation/Design Document/references.bib
@@ -11,6 +11,27 @@ doi={10.1109/79.939834},
 ISSN={1053-5888},
 month={Jul},}
 
+@article{jpeg_standard,
+ author = {Wallace, Gregory K.},
+ title = {The JPEG Still Picture Compression Standard},
+ journal = {Commun. ACM},
+ issue_date = {April 1991},
+ volume = {34},
+ number = {4},
+ month = apr,
+ year = {1991},
+ issn = {0001-0782},
+ pages = {30--44},
+ numpages = {15},
+ url = {http://doi.acm.org/10.1145/103085.103089},
+ doi = {10.1145/103085.103089},
+ acmid = {103089},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
+
+
 @online{pres_fmts, 
     author = {Library of Congress},
     title = {WAVE Audio File Format},
